@@ -2,6 +2,7 @@
 
 	* tp/Texinfo/Convert/Line.pm, Texinfo/Convert/Paragraph.pm: preserve 
 	spaces coming from the document.
+	Do not break words at non-breaking spaces.
 
 2013-08-09  Patrice Dumas  <pertusus@free.fr>
 
